fix: overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,7 @@
 
 body {
 	background: #000214;
+	overflow-x: hidden;
 }
 
 @keyframes add-shadow {
